@@ -3,6 +3,14 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/03/04
+	* Updated the firepillar code so it behaves like the other traps.
+	* Additional status changes now only get triggered if the attack did
+	  damage, not if they get absorbed.
+	* Properly set the opt3 value for Moonlight, Changeundead and Soul Link.
+	* Fixed the "no equip" flag of cards not being properly applied when
+	  attemting to equip items.
+	* Some corections to the new auth db system. [Skotlex]
 2008/03/02
 	* New optimizations for mail system and adjust to use it on Auctions. [Zephyrus]
 	- Added a Sql patch to clear all deleted mails. (There is no need to keep that data)
