@@ -284,7 +284,7 @@
 268: Reloaded the Message of the Day.
 269: Displaying first %d out of %d matches
 //@me output format
-270: *%s %s*
+270: *:%s %s:*
 271: You can't drop items on this map
 272: You can't trade on this map
 273: Commands available:
@@ -390,7 +390,7 @@
 383: Main chat already disabled.
 384: Main chat is currently enabled. Usage: @main <on|off>, @main <message>.
 385: Main chat is currently disabled. Usage: @main <on|off>, @main <message>.
-386: Main@%s : %s
+386: %s :Main: %s
 387: You cannot use Main chat while muted.
 388: You should enable main chat with "@main on" command.
 //NoAsk
